<resources>
    <string name="app_name">Calculadora</string>
    <string name="dig_1">1</string>
    <string name="dig_2">2</string>
    <string name="dig_3">3</string>
    <string name="dig_4">4</string>
    <string name="dig_5">5</string>
    <string name="dig_6">6</string>
    <string name="dig_7">7</string>
    <string name="dig_8">8</string>
    <string name="dig_9">9</string>
    <string name="dig_suma">+</string>
    <string name="dig_0">0</string>
    <string name="dig_resta">-</string>
    <string name="dig_borrar">C</string>
    <string name="dig_multiplicar">*</string>
    <string name="dig_igual">=</string>
    <string name="error">Error</string>
    <string name="dig_pos_neg">+/-</string>
    <string name="dig_division">/</string>
    <string name="dig_exponencial">^</string>

</resources>